# dev

./: README.md
apicalls/: README.md
apicalls/CreateSusProcess/: main.c
apicalls/snapshotting/PSSnapshot/: ProcessSnapshot.h  main.c
enum/: README.md
enum/allocatechecker/: main.c
enum/dupehandle/: main.c
enum/handleinject/: main.c
enum/pthandles/: README.md  main.c
humanerror/: README.md  humanerror.h  main.c
injections/: README.md
injections/injecthandle/: main.c
injections/injectwindow/: main.c
injections/snapinject/: ProcessSnapshot.h  README.md  main.c
rust/: README.md
rust/CreateSusProcess/: Cargo.toml  README.md
rust/CreateSusProcess/src/: main.rs
rust/GetProcAddress/: Cargo.toml  README.md
rust/GetProcAddress/src/: main.rs
rust/HumanError/: Cargo.toml  README.md  main.rs
rust/HumanError/src/: humanerror.rs  lib.rs
rust/RtlCreateProcessReflection/: README.md
rust/RtlCreateProcessReflection/API/: Cargo.toml  README.md
rust/RtlCreateProcessReflection/API/src/: main.rs
rust/RtlCreateProcessReflection/direct/: Cargo.toml  README.md
rust/RtlCreateProcessReflection/direct/src/: main.rs
rust/inject_sus/: Cargo.toml  README.md
rust/inject_sus/src/: main.rs
rust/lsass/: README.md
rust/lsass/refldump/: Cargo.toml  README.md  sign.ps1
rust/lsass/refldump/safetydump/: Cargo.toml
rust/lsass/refldump/safetydump/src/: lib.rs
rust/lsass/refldump/src/: main.rs
rust/revshell/: Cargo.toml  README.md
rust/revshell/src/: main.rs
rust/snapshotting/: README.md
rust/snapshotting/PSSnapshot/: Cargo.toml  README.md
rust/snapshotting/PSSnapshot/src/: main.rs
