[package]
name = "safetydump"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["heapapi", "psapi", "winbase", "winerror", "winhttp"] }
base64 = "0.13.0"
obfstr = "0.3"
sysinfo = "0.30.12"
